<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.langert.coolsare.LandingPage"
    android:background="@drawable/ultim">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/catText"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fbf8f8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schUni"
        android:id="@+id/button2"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textColor="#080808" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabinUni"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_alignEnd="@+id/textView3"
        android:textColor="#080808" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offUni"
        android:id="@+id/button4"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textColor="#080808" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lawUni"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_alignEnd="@+id/textView3"
        android:textColor="#080808" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patientUni"
        android:id="@+id/button6"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="51dp"
        android:textColor="#080808" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transUni"
        android:id="@+id/button7"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignStart="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:textColor="#080808" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proButton"
        android:id="@+id/button8"
        android:layout_below="@+id/button6"
        android:layout_alignEnd="@+id/button7"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButt"
        android:id="@+id/button13"
        android:layout_below="@+id/button8"
        android:layout_alignEnd="@+id/button7"
        android:layout_alignStart="@+id/button8" />
</RelativeLayout>
