<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.langert.coolsare.Payment"
    android:background="@drawable/ultim">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/payText"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#f9f4f4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codButton"
        android:id="@+id/button9"
        android:layout_marginTop="95dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mpButton"
        android:id="@+id/button10"
        android:layout_alignTop="@+id/button9"
        android:layout_toEndOf="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payButton"
        android:id="@+id/button11"
        android:layout_alignTop="@+id/button10"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cheOutButton"
        android:id="@+id/button12"
        android:layout_below="@+id/button11"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButtt"
        android:id="@+id/button14"
        android:layout_below="@+id/button12"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resText"
        android:id="@+id/textView2"
        android:textColor="#f6f7fc"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView2"
        android:textColor="#f9f3f3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/locText"
        android:id="@+id/textView6"
        android:layout_above="@+id/button10"
        android:layout_alignStart="@+id/textView4"
        android:textColor="#f90505" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/imageView3"
        android:layout_below="@+id/button14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:backgroundTint="@drawable/airtel"
        android:background="@drawable/airtel"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
